# ProxyZms

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  build.rs  proxyzms.rc
.github/workflows/: ci.yml  release.yml
assets/: main.css  tailwind.css
scripts/: inject-macos-info-plist.sh
src/: autostart.rs  bootstrap.rs  config.rs  format.rs  main.rs
src/ble_lock/: config.rs  device.rs  locker.rs  mod.rs  monitor.rs  notifier.rs  runner.rs  scanner.rs
src/mihomo/: api.rs  mod.rs  process.rs  types.rs
src/views/: ble_components.rs  ble_lock.rs  connections.rs  dashboard.rs  flow.rs  mod.rs  proxies.rs  settings.rs
