[package]
name = "proxy-zms"
version = "0.0.6"
authors = ["ZHOUMAOSEN"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/iTZR1314/ProxyZms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt"] }
dirs = "6.0.0"
futures-util = "0.3"
flate2 = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
ctrlc = { version = "3", features = ["termination"] }
urlencoding = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
webbrowser = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Windows 构建时只嵌 requireAdministrator 清单(不带 VERSION,避免与 dx 的资源冲突)
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
